@@ -6,7 +6,7 @@ A one-method library for substituting ${stuff} in text strings.
 
 == getting it
 
-    sudo gem install rufus-dollar
+  sudo gem install rufus-dollar
 
 or at
 
@@ -15,23 +15,23 @@ http://rubyforge.org/frs/?group_id=4812
 
 == usage
 
-    require 'rubygems'
-    require 'rufus/dollar'
-
-    h = {
-        "name" => "Fred Brooks",
-        "title" => "Silver Bullet",
-        "left" => "na",
-        "right" => "me",
-    }
-
-    puts Rufus::dsub "${name} wrote '${title}'", h
-        # => "Fred Brooks wrote 'Silver Bullet'"
-
-    # dollar notations are nestable
-
-    puts Rufus::dsub "${${left}${right}}", h
-        # => "${name}" => "Fred Brooks"
+  require 'rubygems'
+  require 'rufus/dollar'
+  
+  h = {
+    'name' => 'Fred Brooks',
+    'title' => 'Silver Bullet',
+    'left' => 'na',
+    'right' => 'me',
+  }
+  
+  puts Rufus::dsub "${name} wrote '${title}'", h
+    # => "Fred Brooks wrote 'Silver Bullet'"
+  
+  # dollar notations are nestable
+  
+  puts Rufus::dsub "${${left}${right}}", h
+    # => "${name}" => "Fred Brooks"
 
 
 == dependencies
@@ -43,7 +43,7 @@ None.
 
 On the rufus-ruby list[http://groups.google.com/group/rufus-ruby] :
 
-    http://groups.google.com/group/rufus-ruby
+  http://groups.google.com/group/rufus-ruby
 
 
 == issue tracker
@@ -55,7 +55,7 @@ http://rubyforge.org/tracker/?atid=18584&group_id=4812&func=browse
 
 http://github.com/jmettraux/rufus-dollar
 
-    git clone git://github.com/jmettraux/rufus-dollar.git
+  git clone git://github.com/jmettraux/rufus-dollar.git
 
 
 == author
