@@ -7,25 +7,24 @@
 # Mon Feb 18 23:32:12 JST 2008
 #
 
-require 'test/unit'
-require 'rufus/dollar'
-require 'test_base'
+require File.dirname(__FILE__) + '/test_base'
+
 
 class NestedTest < Test::Unit::TestCase
-    include TestBase
+  include TestBase
 
-    #def setup
-    #end
+  #def setup
+  #end
 
-    #def teardown
-    #end
+  #def teardown
+  #end
 
-    def test_0
+  def test_0
 
-        dotest " ${a${b}e} ", {}, "  "
-        dotest " ${a{b}e} ", {}, "  "
-        dotest "${a{b}e}", {}, ""
-        dotest " \\${a{b}e} ", {}, " \\${a{b}e} "
-        dotest "{a${b}c}", { "b" => 2 }, "{a2c}"
-    end
+    dotest " ${a${b}e} ", {}, "  "
+    dotest " ${a{b}e} ", {}, "  "
+    dotest "${a{b}e}", {}, ""
+    dotest " \\${a{b}e} ", {}, " \\${a{b}e} "
+    dotest "{a${b}c}", { "b" => 2 }, "{a2c}"
+  end
 end
