@@ -1,4 +1,4 @@
 
-require 'test/dollar_test'
-require 'test/nested_test'
+require File.dirname(__FILE__) + '/dollar_test'
+require File.dirname(__FILE__) + '/nested_test'
 
